--- a/DrawingBoard/Storyboard/Base.lproj/Main.storyboard
+++ b/DrawingBoard/Storyboard/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="XhK-NY-7cq">
-                                <rect key="frame" x="10" y="101" width="370" height="669"/>
+                                <rect key="frame" x="10" y="101" width="370" height="699"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="1hK-Bd-ga8">
                                         <rect key="frame" x="0.0" y="0.0" width="370" height="50"/>
@@ -68,7 +68,7 @@
                                         </constraints>
                                     </stackView>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="3bu-A2-Mit">
-                                        <rect key="frame" x="0.0" y="60" width="370" height="32"/>
+                                        <rect key="frame" x="0.0" y="60" width="370" height="26"/>
                                         <segments>
                                             <segment title="WhiteBoard"/>
                                             <segment title="BlackBoard"/>
@@ -78,11 +78,11 @@
                                         </connections>
                                     </segmentedControl>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cgj-TB-14P" customClass="CanvasView" customModule="DrawingBoard" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="101" width="370" height="518"/>
+                                        <rect key="frame" x="0.0" y="95" width="370" height="514"/>
                                         <color key="backgroundColor" systemColor="labelColor"/>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="b9b-b5-24Q">
-                                        <rect key="frame" x="0.0" y="629" width="370" height="40"/>
+                                        <rect key="frame" x="0.0" y="619" width="370" height="40"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="FgR-k5-9Bc">
                                                 <rect key="frame" x="0.0" y="0.0" width="116.66666666666667" height="40"/>
@@ -156,6 +156,15 @@
                                             <constraint firstAttribute="height" constant="40" id="RYu-cS-UBC"/>
                                         </constraints>
                                     </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WxN-0Q-IKV">
+                                        <rect key="frame" x="0.0" y="669" width="370" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="OdR-eT-W0N"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -164,12 +173,13 @@
                         <constraints>
                             <constraint firstItem="XhK-NY-7cq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="ML5-b8-rZn"/>
                             <constraint firstItem="XhK-NY-7cq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="OtN-zc-TH0"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="XhK-NY-7cq" secondAttribute="bottom" constant="40" id="WRL-sd-Jov"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="XhK-NY-7cq" secondAttribute="bottom" constant="10" id="WRL-sd-Jov"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XhK-NY-7cq" secondAttribute="trailing" constant="10" id="zx9-qS-xaS"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="KolourPencil" largeTitleDisplayMode="always" id="6AA-j1-XnU"/>
                     <connections>
+                        <outlet property="appVersionLabel" destination="WxN-0Q-IKV" id="G1K-Yn-MTN"/>
                         <outlet property="canvasView" destination="cgj-TB-14P" id="AyX-nb-oAK"/>
                         <outlet property="pencilColorButtonOutlet" destination="c6M-Rh-ozy" id="rdv-w5-Kb7"/>
                         <outlet property="segmentControlOutlet" destination="3bu-A2-Mit" id="VVw-YS-BZm"/>
