--- a/DrawingBoard/Storyboard/Base.lproj/Main.storyboard
+++ b/DrawingBoard/Storyboard/Base.lproj/Main.storyboard
@@ -40,12 +40,15 @@
                                                 <rect key="frame" x="260" y="0.0" width="110" height="50"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c6M-Rh-ozy">
-                                                        <rect key="frame" x="0.0" y="0.0" width="110" height="50"/>
+                                                        <rect key="frame" x="5" y="5" width="100" height="40"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="40" id="KMH-tZ-7va"/>
+                                                        </constraints>
                                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain" image="pencil" catalog="system" title="Pencil Color">
-                                                            <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="10"/>
+                                                            <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="8"/>
                                                             <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </buttonConfiguration>
                                                         <connections>
@@ -55,20 +58,20 @@
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
-                                                    <constraint firstItem="c6M-Rh-ozy" firstAttribute="leading" secondItem="rJL-y9-nXB" secondAttribute="leading" id="0Zz-IB-HF9"/>
-                                                    <constraint firstItem="c6M-Rh-ozy" firstAttribute="top" secondItem="rJL-y9-nXB" secondAttribute="top" id="1Mt-Zu-zkr"/>
-                                                    <constraint firstAttribute="trailing" secondItem="c6M-Rh-ozy" secondAttribute="trailing" id="Mfm-Kf-Dws"/>
+                                                    <constraint firstItem="c6M-Rh-ozy" firstAttribute="leading" secondItem="rJL-y9-nXB" secondAttribute="leading" constant="5" id="0Zz-IB-HF9"/>
+                                                    <constraint firstItem="c6M-Rh-ozy" firstAttribute="top" secondItem="rJL-y9-nXB" secondAttribute="top" constant="5" id="1Mt-Zu-zkr"/>
+                                                    <constraint firstAttribute="trailing" secondItem="c6M-Rh-ozy" secondAttribute="trailing" constant="5" id="Mfm-Kf-Dws"/>
                                                     <constraint firstAttribute="width" constant="110" id="VfT-c1-Zu2"/>
-                                                    <constraint firstAttribute="bottom" secondItem="c6M-Rh-ozy" secondAttribute="bottom" id="jWx-YA-jH9"/>
+                                                    <constraint firstAttribute="bottom" secondItem="c6M-Rh-ozy" secondAttribute="bottom" constant="5" id="jWx-YA-jH9"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="BAM-vS-5i5"/>
-                                        </constraints>
                                     </stackView>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="3bu-A2-Mit">
-                                        <rect key="frame" x="0.0" y="60" width="370" height="26"/>
+                                        <rect key="frame" x="0.0" y="60" width="370" height="51"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="ux8-ae-CSc"/>
+                                        </constraints>
                                         <segments>
                                             <segment title="WhiteBoard"/>
                                             <segment title="BlackBoard"/>
@@ -78,7 +81,7 @@
                                         </connections>
                                     </segmentedControl>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cgj-TB-14P" customClass="CanvasView" customModule="DrawingBoard" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="95" width="370" height="514"/>
+                                        <rect key="frame" x="0.0" y="120" width="370" height="489"/>
                                         <color key="backgroundColor" systemColor="labelColor"/>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="b9b-b5-24Q">
@@ -181,8 +184,11 @@
                     <connections>
                         <outlet property="appVersionLabel" destination="WxN-0Q-IKV" id="G1K-Yn-MTN"/>
                         <outlet property="canvasView" destination="cgj-TB-14P" id="AyX-nb-oAK"/>
+                        <outlet property="deleteButtonOutlet" destination="G4L-r8-Xep" id="H1v-x1-iWC"/>
                         <outlet property="pencilColorButtonOutlet" destination="c6M-Rh-ozy" id="rdv-w5-Kb7"/>
+                        <outlet property="saveButtonOutlet" destination="amB-uW-FYt" id="2bF-Ux-TIp"/>
                         <outlet property="segmentControlOutlet" destination="3bu-A2-Mit" id="VVw-YS-BZm"/>
+                        <outlet property="shareButtonOutlet" destination="Xsi-WC-JNC" id="5DX-jV-Yhg"/>
                         <outlet property="sliderValueLabel" destination="W9g-7C-4qE" id="Vjd-d7-BhZ"/>
                         <outlet property="strokeSizeSlider" destination="oFa-Zp-i9n" id="ePd-84-UBa"/>
                         <outlet property="viewForButton" destination="rJL-y9-nXB" id="EMZ-Za-7hO"/>
